--- a/Проектное задание главы 2/templates/index.html
+++ b/Проектное задание главы 2/templates/index.html
@@ -14,7 +14,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1551882547-ff40c63fe5fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Marina Lake Hotel & Spa"  }}</h2>
@@ -26,7 +26,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1445019980597-93fa8acb246c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Baroque Hotel"  }}</h2>
@@ -38,7 +38,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1569660072562-48a035e65c30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Voyager Resort"  }}</h2>
@@ -50,7 +50,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1520250497591-112f2f40a3f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Orbit Hotel"  }}</h2>
@@ -62,7 +62,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1566073771259-6a8506099945?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Atlantis Cabin Hotel"  }}</h2>
@@ -74,7 +74,7 @@
       <div class="col-4">
         <div class="card mb-4">
           <div class="embed-responsive embed-responsive-16by9">
-             <img class="card-img-top embed-responsive-item" src="https://place-hold.it/300x200" alt="" />
+             <img class="card-img-top embed-responsive-item" src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="" />
           </div>          
           <div class="card-body">
             <h2 class="h5 card-title">{{  "Light Renaissance Hotel"  }}</h2>
